--- a/final_project.qmd
+++ b/final_project.qmd
@@ -24,41 +24,45 @@ library(tidyverse)
 library(knitr)
 ```
 
+## Hypothesis
+
+Countries with higher GDP will have higher sustainability scores.
+
 ## Data
 
 Data from GapMinder
 
-Explanatory Variable: CO2 Total Emissions (<http://gapm.io/dco2_consumption_historic>)
+Explanatory Variable: GDP per Capita (<http://gapm.io/dgdpcap_cppp>)
 
-Response Variable: Storm affected annual number (<https://www.emdat.be/database>)
+Response Variable: Sustainable Development Index (<http://gapm.io/dsdi>)
 
 ```{r}
-emissions <- read_csv("co2_cons.csv")
-#194 rows (countries), 224 columns(1800 - 2022)
+sustainability <- read_csv("sdi.csv")
+#164 countries, 1990 - 2019
 
-storms <- read_csv("storm_affected_annual_number.csv")
-#179 rows (countries), 40 columns (1970 - 2008)
+gdp <- read_csv("gdp_pcap.csv")
+#195 countries, 1800 - 2100
 ```
 
 # 2. Data Cleaning
 
 ```{r}
 #pivot longer (each row identified by a country and a year)
-emissions_long <- emissions |> 
-  mutate(across(.cols = '1800':'2022',
-                .fns = ~ as.numeric(.x, na.rm = TRUE))) |> 
-  pivot_longer(cols = '1800':'2022', 
+sustainability.long <- sustainability |> 
+  mutate(across(.cols = '1990':'2019', .fns = ~as.numeric(.x, na.rm = TRUE))) |> 
+  pivot_longer(cols = '1990':'2019', 
                names_to = "year", 
-               values_to = "emissions")
+               values_to = "sdi")
 
-storms_long <- storms |> 
-  pivot_longer(cols = '1970':'2008', 
+gdp_long <- gdp |> 
+  mutate(across(.cols = '1800':'2100', .fns = ~as.numeric(.x, na.rm = TRUE))) |> 
+  pivot_longer(cols = '1800':'2100', 
                names_to = "year", 
-               values_to = "people_affected")
+               values_to = "gdp")
 
-#left_join with storm as left dataset (more restricted)
-df.clean <- storms_long |> 
-  left_join(emissions_long, join_by(country, year)) |> 
+#left_join
+df.clean <- sustainability.long |> 
+  left_join(gdp_long, join_by(country, year)) |> 
   group_by()
 
 ```
