--- a/final_project.qmd
+++ b/final_project.qmd
@@ -19,11 +19,17 @@ execute:
 
 ## Hypothesis
 
-Countries with higher GDP will have higher sustainability scores.
+**Countries with higher GDP will have higher sustainability scores. There is a positive correlation between country wealth and sustainability score of countries.**
+
+We came up with this hypothesis based on news articles we have seen throughout various websites stating things like "How the rich are driving climate change**" (**<https://www.bbc.com/future/article/20211025-climate-how-to-make-the-rich-pay-for-their-carbon-emissions>) which often leads into more articles talking about whether the rich have a responsibility to pay for climate efforts (<https://www.globalcitizen.org/en/content/international-climate-finance-explainer/>). We eventually came across an article talking about how richer countries actually have a bigger gap in marine sustainability efforts compared to poorer countries (<https://www.earth.com/news/wealthy-nations-are-making-more-progress-toward-sustainable-development/>). Overall, we were motivated to see whether richer countries do actually receive higher sustainability scores.
 
 ## Objectives
 
-1.  
+1.  Analyze the relationship between GDP and sustainability scores across different countries
+
+2.  Evaluate Outliers in the data
+
+3.  Ultimately asses whether sustainability outcomes are better or worse depending on a country's GDP
 
 ## Packages
 
@@ -34,11 +40,19 @@ library(knitr)
 
 ## Data
 
-Data from GapMinder
+**Data pulled from GapMinder**
 
-Explanatory Variable: GDP per Capita (<http://gapm.io/dgdpcap_cppp>)
+**Explanatory Variable: GDP per Capita (<http://gapm.io/dgdpcap_cppp>) from 1800-2022**
 
-Response Variable: Sustainable Development Index (<http://gapm.io/dsdi>)
+**Response Variable: Sustainable Development Index (<http://gapm.io/dsdi>) from 1990-2019**
+
+*The original data for GDP per Capita came from:*
+
+For 1990-2022, the series aligns with the World Bank’s GDP per capita data (<https://data.worldbank.org/indicator/NY.GDP.PCAP.PP.KD>), published in April 2024. Prior to 1990, data is drawn from the 2023 version of the Maddison Project Database (<https://www.rug.nl/ggdc/historicaldevelopment/maddison/releases/maddison-project-database-2023>), which offers historical GDP estimates for 169 countries. In rare cases where neither source provided data (typically between 1950-2019) Gapminder uses the Penn World Table (PWT) version 10.01 (<https://www.rug.nl/ggdc/productivity/pwt/>), which covers 183 countries. When none of the above sources are available, Gapminder falls back on its own historical estimates, primarily from GDP Per capita v26 and earlier versions (<https://www.gapminder.org/documentation/documentation/gapdoc001_v9.pdf>). Additionally, Gapminder has produced new estimates for countries experiencing crises, including Afghanistan, Belarus, Cuba, North Korea, and others (these data points may be less accurate). The various sources were combined and cleaned for GapMinder.
+
+*The original data for Sustainable Development Index came from:*
+
+<https://www.sustainabledevelopmentindex.org/methods> which is a research project focused on the ecological efficiency of nations in delivering human development. The data was somewhat cleaned/split into different categories and then posted to GapMinder.
 
 ```{r}
 sustainability <- read_csv("sdi.csv")
@@ -70,6 +84,14 @@ df.clean <- sustainability.long |>
   filter(!if_any(.cols = sdi:gdp, .fns = ~is.na(.x)))
 
 ```
+
+**Data cleaning process and decisions that may impact the analysis:**
+
+I dropped rows missing sdi or gdp data, and these missing values likely occurred due to the SDI dataset covering only 1990–2019, whereas the GDP dataset spans 1800–2100. So, GDP values may exist for years where SDI data does not, and vice versa.
+
+Also, data cleaning removing missing sdi or gdp data mainly affected small or politically unstable countries including: Angola, Antigua, Bhutan, Eritria, Lebanon, Nigeria, Serbia, Suriname, Turkmenistan, and Vanatu (Belarus, North Korea not included at all in the data).
+
+\*The following is not included in this week's report, but we included it for future reference
 
 # 3. Modeling and Relationship Between Sustainability (SDI) and GDP per capita
 
