Additional source added in the support for the hypothesis.

--- a/final_project.qmd
+++ b/final_project.qmd
@@ -21,7 +21,7 @@ execute:
 
 **Countries with higher GDP will have higher sustainability scores. There is a positive correlation between country wealth and sustainability score of countries.**
 
-We came up with this hypothesis based on news articles we have seen throughout various websites stating things like "How the rich are driving climate change**" (**<https://www.bbc.com/future/article/20211025-climate-how-to-make-the-rich-pay-for-their-carbon-emissions>) which often leads into more articles talking about whether the rich have a responsibility to pay for climate efforts (<https://www.globalcitizen.org/en/content/international-climate-finance-explainer/>). We eventually came across an article talking about how richer countries actually have a bigger gap in marine sustainability efforts compared to poorer countries (<https://www.earth.com/news/wealthy-nations-are-making-more-progress-toward-sustainable-development/>). Overall, we were motivated to see whether richer countries do actually receive higher sustainability scores.
+We came up with this hypothesis based on news articles we have seen throughout various websites stating things like "How the rich are driving climate change**" (**<https://www.bbc.com/future/article/20211025-climate-how-to-make-the-rich-pay-for-their-carbon-emissions>) which often leads into more articles talking about whether the rich have a responsibility to pay for climate efforts (<https://www.globalcitizen.org/en/content/international-climate-finance-explainer/>). We eventually came across an article talking about how richer countries actually have a bigger gap in marine sustainability efforts compared to poorer countries (<https://www.earth.com/news/wealthy-nations-are-making-more-progress-toward-sustainable-development/>). Additionally, we found that some of the leading countries in sustainability efforts across governance, environmental and social companies include Denmark, Finland, Sweden and Norway which are all countries that are developed countries versus some of the lowest being Burkina Faso, Guinea, and Ethiopia which are developing nations (https://www.robeco.com/en-us/sustainable-investing/expertise/most-sustainable-countries-in-the-world). Overall, we were motivated to see whether richer countries do actually receive higher sustainability scores.
 
 ## Objectives
 
