--- a/final_project.qmd
+++ b/final_project.qmd
@@ -156,7 +156,8 @@ df.clean |>
   labs(x = "GDP per Capita (2017 dollars)", 
   y = "Sustainable Development Index (SDI)", 
   subtitle = "Year: {frame_time}",
-  title = "Change Over time in the relationship between GDP per capita and sustainability (SDI) \n from 1990 to 2019")
+  title = "Change over time in the relationship between GDP per capita and \n sustainability (SDI) from 1990 to 2019")+
+  theme(plot.title = element_text(size = 14, margin = margin(t = 20)))
 ```
 
 ## 2.2. Linear Regression
