--- a/final_project.qmd
+++ b/final_project.qmd
@@ -7,6 +7,7 @@ format:
     code-tools: true
     toc: true
     html-table-processing: none
+    code-fold: true
 editor: source
 execute: 
   error: true
@@ -15,21 +16,13 @@ execute:
   warning: false
 ---
 
-# 1. Introduction
+# Introduction
 
-## Hypothesis
+We were interested in investigating the relationship between gross domestic product (GDP) and the sustainable development index (SDI). GDP is a metric that provides a monetary sum of the services and goods outputted from a country per person (https://www.focus-economics.com/economic-indicator/gdp-per-capita/). SDI measures how efficient a countries developments are (https://www.sustainabledevelopmentindex.org/). Before forming a hypothesis about the relationship between these two variables, we investigated development in different countries. We found that some of the leading countries in sustainability efforts across governance, environmental and social companies include Denmark, Finland, Sweden and Norway which are all countries that are developed countries versus some of the lowest being Burkina Faso, Guinea, and Ethiopia which are developing nations (https://www.robeco.com/en-us/sustainable-investing/expertise/most-sustainable-countries-in-the-world). We found a sector of research investigating the relationship between the rich and climate change and how they are leading to rapid climate change (Paddison, 2021). Additionally, this stemmed into articles discussing whether the rich have a responsibility to pay for their impact on climate change (Gharib, 2021). Additionally, there is a larger gap in sustainability efforts of richer countries compared to poorer countries (Sexton, 2023). Overall, we were motivated to see whether richer countries do actually receive higher sustainability scores.
 
-**Countries with higher GDP will have higher sustainability scores. There is a positive correlation between country wealth and sustainability score of countries.**
+For these reasons and due to our preliminary research that we conducted we hypothesized that countries with higher GDP will have higher sustainability scores. Additionally, we hypothesized that there is a positive correlation between country wealth and sustainability score of countries.
 
-We came up with this hypothesis based on news articles we have seen throughout various websites stating things like "How the rich are driving climate change**" (**<https://www.bbc.com/future/article/20211025-climate-how-to-make-the-rich-pay-for-their-carbon-emissions>) which often leads into more articles talking about whether the rich have a responsibility to pay for climate efforts (<https://www.globalcitizen.org/en/content/international-climate-finance-explainer/>). We eventually came across an article talking about how richer countries actually have a bigger gap in marine sustainability efforts compared to poorer countries (<https://www.earth.com/news/wealthy-nations-are-making-more-progress-toward-sustainable-development/>). Additionally, we found that some of the leading countries in sustainability efforts across governance, environmental and social companies include Denmark, Finland, Sweden and Norway which are all countries that are developed countries versus some of the lowest being Burkina Faso, Guinea, and Ethiopia which are developing nations (https://www.robeco.com/en-us/sustainable-investing/expertise/most-sustainable-countries-in-the-world). Overall, we were motivated to see whether richer countries do actually receive higher sustainability scores.
-
-## Objectives
-
-1.  Analyze the relationship between GDP and sustainability scores across different countries
-
-2.  Evaluate outliers in the data
-
-3.  Ultimately asses whether sustainability outcomes are better or worse depending on a country's GDP
+After completing this report we hope to provide an analysis of the relationship between GDP and sustainability scores across different countries , evaluate outliers in the data, an ultimately asses whether sustainability outcomes are better or worse depending on a country's GDP.
 
 ## Packages
 
@@ -44,19 +37,10 @@ library(scales) #for formatting p-values
 
 ## Data
 
-We extracted two datasets from GapMinder on May 20, 2025.
+We extracted two datasets from GapMinder on May 20, 2025. The first dataset is where the GDP per Capita was sourced from. The explanatory variable we were interested in is GDP per Capita (<http://gapm.io/dgdpcap_cppp>) from 1800-2022. For 1990-2022, the series aligns with the World Bank’s GDP per capita data (<https://data.worldbank.org/indicator/NY.GDP.PCAP.PP.KD>), published in April 2024. Prior to 1990, data is drawn from the 2023 version of the Maddison Project Database (<https://www.rug.nl/ggdc/historicaldevelopment/maddison/releases/maddison-project-database-2023>), which offers historical GDP estimates for 169 countries. In rare cases where neither source provided data (typically between 1950-2019) Gapminder uses the Penn World Table (PWT) version 10.01 (<https://www.rug.nl/ggdc/productivity/pwt/>), which covers 183 countries. When none of the above sources are available, Gapminder falls back on its own historical estimates, primarily from GDP Per capita v26 and earlier versions (<https://www.gapminder.org/documentation/documentation/gapdoc001_v9.pdf>). Additionally, Gapminder has produced new estimates for countries experiencing crises, including Afghanistan, Belarus, Cuba, North Korea, and others (these data points may be less accurate). The various sources were combined and cleaned for GapMinder. 
 
-**Explanatory Variable:** GDP per Capita (<http://gapm.io/dgdpcap_cppp>) from 1800-2022
+The second dataset is where the sustainable development index was sourced from. The response variable we were interested in is the Sustainable Development Index (<http://gapm.io/dsdi>) from 1990-2019. The Sustainable Development Index is a research project focused on the ecological efficiency of nations in delivering human development. The data was somewhat cleaned/split into different categories and then posted to GapMinder (https://www.sustainabledevelopmentindex.org/methods).
 
-**Response Variable:** Sustainable Development Index (<http://gapm.io/dsdi>) from 1990-2019
-
-*The original data for GDP per Capita came from:*
-
-For 1990-2022, the series aligns with the World Bank’s GDP per capita data (<https://data.worldbank.org/indicator/NY.GDP.PCAP.PP.KD>), published in April 2024. Prior to 1990, data is drawn from the 2023 version of the Maddison Project Database (<https://www.rug.nl/ggdc/historicaldevelopment/maddison/releases/maddison-project-database-2023>), which offers historical GDP estimates for 169 countries. In rare cases where neither source provided data (typically between 1950-2019) Gapminder uses the Penn World Table (PWT) version 10.01 (<https://www.rug.nl/ggdc/productivity/pwt/>), which covers 183 countries. When none of the above sources are available, Gapminder falls back on its own historical estimates, primarily from GDP Per capita v26 and earlier versions (<https://www.gapminder.org/documentation/documentation/gapdoc001_v9.pdf>). Additionally, Gapminder has produced new estimates for countries experiencing crises, including Afghanistan, Belarus, Cuba, North Korea, and others (these data points may be less accurate). The various sources were combined and cleaned for GapMinder.
-
-*The original data for Sustainable Development Index came from:*
-
-<https://www.sustainabledevelopmentindex.org/methods> which is a research project focused on the ecological efficiency of nations in delivering human development. The data was somewhat cleaned/split into different categories and then posted to GapMinder.
 
 ```{r}
 sustainability <- read_csv("sdi.csv")
@@ -98,9 +82,6 @@ df.clean <- sustainability.long |>
 str(df.clean)
 ```
 
-**Dataset Description:**
-
-Our dataset includes four columns (Country, Year, SDI and GDP) with 2,306 observations. Each observation is identified by a country and year (e.g. Ethiopia, 2018).
 
 ```{r}
 df.clean |> 
@@ -115,13 +96,14 @@ df.clean |>
   
 ```
 
-**Data cleaning process and decisions that may impact the analysis:**
 
-We dropped rows missing sdi or gdp data, and these missing values likely occurred due to the SDI dataset covering only 1990–2019, whereas the GDP dataset spans 1800–2100. So, GDP values may exist for years where SDI data does not, and vice versa. The GDP dataset included hypothetical data until the year 2100. We did not want to focus on any hypothetical data and we wanted to ensure consistency across datasets and therefore did not include any years past 2019 and before 1990. When the GDP and SDI datasets were joined we constrained the data to match the years in the SDI dataset.
+Our dataset includes four variables (Country, Year, SDI and GDP) with a total of 2,306 observations. Note that each observation is identified by a country and year (e.g. Ethiopia, 2018).
 
-Also, data cleaning removing missing sdi or gdp data mainly affected small or politically unstable countries including: Angola, Antigua, Bhutan, Eritria, Lebanon, Nigeria, Serbia, Suriname, Turkmenistan, and Vanatu (Belarus, North Korea not included at all in the data).
+We excluded observations missing SDI or GDP data, as these missing values occurred due to the datasets covering additional years not present in the other. For example, the SDI dataset covered only 1990–2019, whereas the GDP dataset spaned 1800–2100. Therefore, GDP values exist for years where SDI data does not, and vice versa. 
 
-\*The following is not included in this week's report, but we included it for future reference
+The GDP dataset included hypothetical data until the year 2100. We did not want to focus on hypothetical data for this report and we wanted to ensure consistency across datasets. Therefore, we did not include any years past 2019 and before 1990. When the GDP and SDI datasets were combined we constrained the data to match the years in the SDI dataset. 
+
+When data cleaning, removing missing SDI or GDP data mainly affected small or politically unstable countries including: Angola, Antigua, Bhutan, Eritria, Lebanon, Nigeria, Serbia, Suriname, Turkmenistan, and Vanatu. Important to note, Belarus and North Korea were not included in the data at all.
 
 # 3. Modeling and Relationship Between Sustainability (SDI) and GDP per capita
 
@@ -280,3 +262,5 @@ model.fit <- c(total.variance, fitted.variance, R2) |>
 ```
 
 # 6. Works Cited
+
+
