--- a/final_project.qmd
+++ b/final_project.qmd
@@ -24,7 +24,7 @@ For these reasons and due to our preliminary research that we conducted we hypot
 
 After completing this report we hope to provide an analysis of the relationship between GDP and sustainability scores across different countries , evaluate outliers in the data, an ultimately asses whether sustainability outcomes are better or worse depending on a country's GDP.
 
-## Packages
+# Data Description
 
 ```{r}
 library(tidyverse)
@@ -34,8 +34,6 @@ library(gganimate)
 library(broom) 
 library(scales) #for formatting p-values
 ```
-
-## Data
 
 We extracted two datasets from GapMinder on May 20, 2025. The first dataset is where the GDP per Capita was sourced from. The explanatory variable we were interested in is GDP per Capita (<http://gapm.io/dgdpcap_cppp>) from 1800-2022. For 1990-2022, the series aligns with the World Bank’s GDP per capita data (<https://data.worldbank.org/indicator/NY.GDP.PCAP.PP.KD>), published in April 2024. Prior to 1990, data is drawn from the 2023 version of the Maddison Project Database (<https://www.rug.nl/ggdc/historicaldevelopment/maddison/releases/maddison-project-database-2023>), which offers historical GDP estimates for 169 countries. In rare cases where neither source provided data (typically between 1950-2019) Gapminder uses the Penn World Table (PWT) version 10.01 (<https://www.rug.nl/ggdc/productivity/pwt/>), which covers 183 countries. When none of the above sources are available, Gapminder falls back on its own historical estimates, primarily from GDP Per capita v26 and earlier versions (<https://www.gapminder.org/documentation/documentation/gapdoc001_v9.pdf>). Additionally, Gapminder has produced new estimates for countries experiencing crises, including Afghanistan, Belarus, Cuba, North Korea, and others (these data points may be less accurate). The various sources were combined and cleaned for GapMinder.
 
@@ -102,11 +100,30 @@ The GDP dataset included hypothetical data until the year 2100. We did not want 
 
 When data cleaning, removing missing SDI or GDP data mainly affected small or politically unstable countries including: Angola, Antigua, Bhutan, Eritria, Lebanon, Nigeria, Serbia, Suriname, Turkmenistan, and Vanatu. Important to note, Belarus and North Korea were not included in the data at all.
 
-# 3. Modeling and Relationship Between Sustainability (SDI) and GDP per capita
+# Modeling and Relationship Between Sustainability (SDI) and GDP per capita
 
 ## 2.1 Data Visualization
 
-1.  The relationship between the two quantitative variables you are investigating
+In the following plots, we have decided to take the mean GDP per capita accross the years 1990 to 2019 so that each point on the following plots represent one country. We decided to present the data in this way for clarity.
+
+The following plot demonstrates the relationship between the sustainability (in the form of the sustainability development index) and gross domestic product per capita for a country averaged over the years 1990 to 2019. The form of the relationship appears quadratic due to the predominate curve 20,000 dollars for GDP per capita. The direction is positive before 10,000 dollars for GDP per capita and negative after 10,000 dollars for GDP per capita. The strength is strong before 10,000 dollars for GDP per capita with increasing scatter after 10,000 dollars for GDP per capita making it relatively weak. Overall, there does not appear to be any unusual observations.
+
+```{r}
+df.clean |> 
+  group_by(country) |> 
+  summarize(mean.sdi = mean(sdi), mean.gdp = mean(gdp)) |>
+  mutate(gdp_class = case_when(mean.gdp >= 20000 ~ "high_gdp",
+                        mean.gdp < 20000 ~ "low_gdp"))|>
+  ggplot(aes(x = mean.gdp, y = mean.sdi)) +
+  geom_point() +
+  geom_smooth(method = "lm") +
+  theme_minimal() +
+  labs(x = "GDP per Capita (2017 dollars)", y = "", subtitle = "Sustainable Development Index (SDI)", title = "Relationship between GDP per capita and Sustainability (SDI) \n from 1990 to 2019")
+```
+
+
+To enhance the readability of our previous plot we made some adjustments. The following plot demonstrates the relationship between the natural log of sustainability (in the form of the sustainability development index) and natural log of gross domestic product per capita for a country averaged over the years 1990 to 2019 with a graphical separation between GDP per capita for high (greater than or equal to 20000 dollars) and low (less than 20000 dollars) GDP per capita. The form of the relationship appears linear for the high and low GDP plots. The direction is negative for high GDP per capita and positive for low GDP per capita. The strength of both is moderately strong. Overall, there does not appear to be any unusual observations in either plots.
+
 
 ```{r}
 #preliminary scatterplot
@@ -123,6 +140,9 @@ df.clean |>
   
 ```
 
+
+Particularly interested in how richer countries are involved with sustainability efforts, we have decided to focus only on the subplot that demonstrates high GDP per capita countries. The following plot demonstrates the relationship between the natural log of sustainability (in the form of the sustainability development index) and natural log of gross domestic product per capita for a country averaged over the years 1990 to 2019 for high (greater than or equal to 20000 dollars) GDP per capita. The form of the relationship appears linear with the points following a straight line. The direction is negative with an increase in GDP per capita in 2017 dollars resulting in a decrease in sustainability development index (SDI). The strength is moderately strong with a slight amount of scatter around the line. Overall, there does not appear to be any unusual observations in either plots.
+
 ```{r}
 df.clean |> 
   group_by(country) |> 
@@ -133,11 +153,10 @@ df.clean |>
   geom_smooth(method = "lm") +
   theme_minimal() +
   labs(x = "GDP per Capita (2017 dollars)", y = "", subtitle = "Sustainable Development Index (SDI) of High GDP Countries", title = "Relationship between GDP per capita and Sustainability (SDI) \n from 1990 to 2019")
-  
-
 
 
 ```
+
 
 ```{r}
 #Residuals vs Fitted
@@ -157,7 +176,9 @@ lm.fit |>
              color = "red", lwd = 1.5)
 ```
 
-2.  How this relationship (from #1) has changed over time using an animated plot.
+
+The following plot demonstrates the relationship between the natural log of sustainability (in the form of the sustainability development index) and natural log of gross domestic product per capita for high (greater than or equal to 20000 dollars) GDP per capita countries over the years 1990 to 2019. The form of the relationship appears linear with the points following a straight line. The direction is negative with an increase in GDP per capita in 2017 dollars resulting in a decrease in sustainability development index (SDI). The strength is moderately strong with a slight amount of scatter around the line. Overall, there does not appear to be any unusual observations in either plots. Over time, the sustainability index decreased and the GDP per Capita in 2017 dollars increased.
+
 
 ```{r}
 df.clean |> 
@@ -179,6 +200,23 @@ df.clean |>
 ```
 
 ## 2.2. Linear Regression
+
+As mentioned previously, we have decided to take the mean GDP per capita accross the years 1990 to 2019 so that each point on the following plots represent one country. We decided to present the data in this way for clarity.
+
+The statistical method that we selected was the simple linear regression. A simple linear regression assumes that the relationship between the gross domestic product per capita and the sustainability development index has a linear function for the form. This was deemed an appropriate method because the relationship between the two updated variables are linear, the observations do not depend on one another, the residuals were distributed normally, and there is constant variability.
+
+The estimated regression model follows the following notation:
+
+$$\hat{y} = \beta_0 + \beta_1x + \epsilon$$ 
+
+$$\hat{y} = 73.18758 - 0.00067x_i$$
+where the $$\hat{y}$$ is the estimated sustainability development index and $$x_i$$ is the country's GDP per capita in 2017 dollars.
+
+The linear regression model coefficients are as follows:
+
+The intercept of 73.18758 indicates when a country's GDP per capita is 0 dollars, the country's sustainability index in 73.18758.
+
+The slope is -0.00067. We estimate that for every 10000 increase in a county's GDP per capita, their sustainability development index will decrease by 6.7.
 
 ```{r}
 df.clean.model <- df.clean |> 
